; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_user_type_has_variable_size.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_user_type_has_variable_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@TYPE_STRUCT = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @user_type_has_variable_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_type_has_variable_size(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @is_ptr(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @TRUE, align 4
  store i32 %8, i32* %2, align 4
  br label %23

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @type_get_type(i32* %10)
  %12 = load i64, i64* @TYPE_STRUCT, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %9
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @get_struct_fc(i32* %15)
  switch i32 %16, label %19 [
    i32 128, label %17
    i32 130, label %17
    i32 131, label %17
    i32 129, label %17
  ]

17:                                               ; preds = %14, %14, %14, %14
  %18 = load i32, i32* @TRUE, align 4
  store i32 %18, i32* %2, align 4
  br label %23

19:                                               ; preds = %14
  br label %20

20:                                               ; preds = %19, %9
  br label %21

21:                                               ; preds = %20
  %22 = load i32, i32* @FALSE, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %17, %7
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i64 @is_ptr(i32*) #1

declare dso_local i64 @type_get_type(i32*) #1

declare dso_local i32 @get_struct_fc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
